2017-02-21  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/math/common.py(promote_maximally):

	- Clarify documentation and tolerate passing in plain Python numbers
	(for which it will do nothing).

2017-02-21  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/utils/__init__.py:

	Added `path_append`, `path_prepend` and `path_remove` to conveniently
	modify colon-separated path variables (e.g. PATH or ARTS_DATA_PATH).

2017-02-20  Oliver Lemke  <olemke@core-dump.info>

	* doc/*.rst: Use full module names for rst files.

2017-02-19  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/common.py (run_arts):

	Raise proper `FileNotFoundError` instead of an unspecific `Exception` if
	controfile is not found.

2017-02-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py:

	(__eq__): Consider `dataname` when comparing GriddedField objects.

	(to_dict): If defined, use `dataname` as key for the data array.

2017-02-17  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/metrology.py:
	
	(express_uncertainty): Add permissive mode where a single failed
	derivative does not cause the entire expression to fail (awaiting a
	fix for the failures).

	(recursive_args): Bugfix, was dropping indexed values completely
	rather than merely not descending into their index and indexbase.


2017-02-16  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/units/em.py(SRF):

	- Added method for estimating band coefficients for approximative
	conversions.  Not implemented yet, just put the documentation there.

	* typhon/physics/metrology.py(recursive_args):

	- Don't (by default) consider the integrand as an argument, at least
	not until I know how to propagate those through; will not happen for β
	FCDR.

2017-02-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py (load_indexed):

	Fixed documentation format.

2017-02-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py (load_indexed):
