@@ -1,3 +1,9 @@
+2017-02-27  Gerrit Holl  <g.holl@reading.ac.uk>
+
+	* typhon/physics/units/common.py:
+
+	- Add kayser/wavenumber to spectroscopy context for use in pint<0.8
+
 2017-02-21  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/math/common.py(promote_maximally):
